fix img on mobile

--- a/assets/scss/section.scss
+++ b/assets/scss/section.scss
@@ -13,6 +13,9 @@
     @media screen and (max-width: 540px){
         max-width: 100%;
         padding: 1rem;;
+        img{
+            width: 100%;
+        }
     }
 
     p{
